Changelog
=========


2.0.6 (unreleased)
------------------

- Add upgrade step method ``is_profile_installed(profileid)``. [jone]

- Add upgrade step method ``is_product_installed(product_name)``. [jone]


2.0.5 (2016-10-24)
------------------

- Migration: fix error when file obj is an empty string. [jone]


2.0.4 (2016-10-24)
------------------

- Migration: do not migrate empty blobs. [jone]


2.0.3 (2016-09-27)
------------------

- Migration: support all types of standard relation fields. [jone]


2.0.2 (2016-09-27)
------------------

- Migration: skip invalid relations. [jone]


2.0.1 (2016-09-02)
------------------

- Added support for jQuery 1.9+ on @@manage-upgrades control panel. [neilferreira]


2.0.0 (2016-08-18)
------------------

- Fix NoneType AttributeError with newest requests module. [jone]

- Drop Plone 4.1 and 4.2 support. [jone]

- Implement inplace migrator. [jone]


1.19.0 (2016-04-11)
-------------------

- Add option to force reinstall already installed profiles. [jone]


1.18.1 (2016-03-09)
-------------------

- Disable automatic CSRF protection for authorized jsonapi requests. [jone]


1.18.0 (2016-02-16)
-------------------

- Provide the attributes ``base_profile`` and ``target_version`` on
  upgrade steps when using the ``upgrade-step:directory`` directive. [jone]

- Fix profile version when using `upgrade-step:directory` and
  having old upgrade steps but no new ones. [jone]


1.17.0 (2016-01-22)
-------------------

- Add ``bin/upgrade plone_upgrade_needed`` command.  [jone]


1.16.3 (2016-01-22)
-------------------

- Fix upgrade scaffolding when having dots or other
  non-alphanumeric characters. [jone]


1.16.2 (2016-01-15)
-------------------

- Actually the same as 1.16.1, but pypi was broken when I
  released it and now it does not let me use the same version
  number. :-(
  [jone]


1.16.1 (2016-01-13)
-------------------

- Added documentation for the additions of the previous release.  [maurits]


1.16.0 (2016-01-05)